<resources>
    <string name="app_name">powerControl</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="power_control">Power Control</string>
    <string name="seja_bem_vindo">Seja bem vindo,</string>
    <string name="ano">Ano</string>
    <string name="mes">MES</string>
    <string name="read_current">Leitura Atual </string>
    <string name="read_last">Leitura Anterior </string>
    <string name="measured_consumption">Consumo Medido </string>
    <string name="billed_consumption">Consumo Faturado  </string>
    <string name="consumption_period">Período de Consumo </string>
    <string name="rate">Taxa </string>
    <string name="street_lighting">Iluminação Pública </string>

    <string name="valor">14845</string>
    <string name="consumption_period_value">22/04/2020</string>
    <string name="valor_total">Valor total:</string>
    <string name="preposition">à</string>
    <string name="register_month_label">Registro do mês de %s </string>
    <string name="cadastrar">save</string>
    <string name="date_init">Data inicial</string>
    <string name="date_end">Data final</string>
    <string name="amount">Valor Total</string>

    <string name="kilowatt_hour"> %d kWh</string>
    <string name="real"> %.2f R$</string>
    <string name="dateNull">00/00/000</string>
    <string name="year">ANO</string>
    <string name="document">Documento</string>
    <string name="update">ATUALIZAR</string>
    <string name="register">CADASTRAR</string>
    <string name="register_sucess">CADASTRO FEITO COM SUCESSO!</string>
    <string name="update_sucess">ATUALIZAÇÃO FEITA COM SUCESSO</string>
    <string name="add_document_alert">ANEXE UMA CONTA</string>
    <string name="not_found">ARQUIVO NÃO ENCONTRADO</string>
    <string name="choose">Escolha a conta que deseja visualizar</string>
    <string name="download_file">Baixar Arquivo</string>
</resources>
