<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView style="@style/CardItemData">

        <LinearLayout style="@style/LinearItemData">

            <TextView
                android:id="@+id/text"
                android:text="@string/read_current"
                style="@style/style_text_data" />

            <TextView
                android:id="@+id/textView_card_read_current"
                android:text="@string/valor"
                style="@style/style_text_value" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/CardItemData"
        app:cardCornerRadius="5dp">

        <LinearLayout style="@style/LinearItemData">

            <TextView
                style="@style/style_text_data"
                android:text="@string/read_last" />

            <TextView
                android:id="@+id/textView_card_read_last"
                 android:text="@string/valor"
                style="@style/style_text_value" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView style="@style/CardItemData">

        <LinearLayout style="@style/LinearItemData">

            <TextView
                style="@style/style_text_data"
                android:text="@string/measured_consumption" />

            <TextView
                android:id="@+id/textView_card_measured_consumption"
                style="@style/style_text_value"
                android:text="@string/valor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView style="@style/CardItemData">

        <LinearLayout style="@style/LinearItemData">

            <TextView
                style="@style/style_text_data"
                android:text="@string/billed_consumption" />

            <TextView
                style="@style/style_text_value"
                android:id="@+id/textView_card_billed_consumption"
                android:text="@string/valor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/CardItemData"
      >

        <LinearLayout style="@style/LinearItemData">

            <TextView
                style="@style/style_text_data"
                android:text="@string/rate" />

            <TextView
                android:id="@+id/textView_card_rate"
                style="@style/style_text_value"
                android:text="@string/valor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/CardItemData" >

        <LinearLayout style="@style/LinearItemData">

            <TextView
                style="@style/style_text_data"
                android:text="@string/street_lighting" />

            <TextView
                android:id="@+id/textView_card_street_lighting"
                style="@style/style_text_value"
                android:text="@string/valor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>