<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackToGray"
    tools:context=".HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="202dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/seja_bem_vindo"
                    android:textColor="@color/colorBlackToGray"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView_nameApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/advent_pro_semibold"
                    android:text="@string/power_control"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="18sp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputEditText_product_code"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="100dp"
                android:layout_height="69dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/ano"
                android:textColor="@color/colorBlackToGray"
                app:endIconMode="dropdown_menu"
                app:errorEnabled="true">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_year"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:textColor="@color/colorBlackToGray" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:background="@color/colorGrayDark"
        android:layout_width="375dp"
        android:layout_height="119dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_months"
                tools:listitem="@layout/item_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>